Modificações no HTML para suportar 2 notícias

--- a/index.html
+++ b/index.html
@@ -7,28 +7,25 @@
 </head>
 <body>
     <h1>AI Vision</h1>
-    <h2>Inteligência Artificial no Futuro</h2>
-
-    <p>
-        Lorem ipsum dolor sit amet consectetur adipisicing elit. 
-        Veniam officiis ipsa quos, tenetur assumenda non harum deserunt 
-        voluptatum omnis cupiditate maxime quo voluptates, quasi iusto dolore 
-        totam facere labore culpa?
-    </p>
-
-    <ol>
-        <li>elemento</li>
-        <li>elemento2</li>
-    </ol>
-
-    <ul>
-        <li>elemento</li>
-        <li>elemento2</li>
-    </ul>
+    <h2>Tendências de AI no Futuro</h2>
 
     <img src="assets/img/background.png" alt="background">
-    <img src="https://images.unsplash.com/photo-1708570735809-8a3bbc0ce0de?q=80&w=987&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D" alt="background">
 
-    <a href="https://www.fiap.com.br">FIAP</a>
+    <h2>Notícias Importantes de Inteligência Artificial</h2>
+
+    <ul>
+        <li>Notícia 1</li>
+        <ul>
+            <li>"IA Criadora de vídeos extremamente poderosa" - <a href="https://openai.com/sora">OpenAI</a></li>
+        </ul>
+        <li>Notícia 2</li>
+        <ul>
+            <li>"IA Que Promete ser Mais Poderosa que ChatGPT" - <a href="https://gemini.google.com">Google</a></li>
+        </ul>
+    </ul>
+
+    <!-- <img src="https://images.unsplash.com/photo-1708570735809-8a3bbc0ce0de?q=80&w=987&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D" alt="background"> -->
+
+    <!-- <a href="https://www.fiap.com.br">FIAP</a> -->
 </body>
 </html>
