--- a/index.html
+++ b/index.html
@@ -4,12 +4,14 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>AI Vision</title>
+    <link rel="stylesheet" href="./assets/css/style.css">
 </head>
 <body>
-    <h1>AI Vision</h1>
-    <h2>Tendências de AI no Futuro</h2>
 
-    <img src="assets/img/background.png" alt="background">
+    <header>
+        <h1>AI Vision</h1>
+        <h2>Tendências de AI no Futuro</h2>
+    </header>
 
     <h2>Notícias Importantes de Inteligência Artificial</h2>
 
@@ -23,9 +25,5 @@
             <li>"IA Que Promete ser Mais Poderosa que ChatGPT" - <a href="https://gemini.google.com">Google</a></li>
         </ul>
     </ul>
-
-    <!-- <img src="https://images.unsplash.com/photo-1708570735809-8a3bbc0ce0de?q=80&w=987&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D" alt="background"> -->
-
-    <!-- <a href="https://www.fiap.com.br">FIAP</a> -->
 </body>
 </html>
