Foram adicionadas melhorias na estilização da página

--- a/index.html
+++ b/index.html
@@ -13,17 +13,20 @@
         <h2>Tendências de AI no Futuro</h2>
     </header>
 
-    <h2>Notícias Importantes de Inteligência Artificial</h2>
+    <section>
+        <h2>Notícias Importantes de Inteligência Artificial</h2>
+    
+        <ul>
+            <li>Notícia 1</li>
+            <ul>
+                <li>"IA Criadora de vídeos extremamente poderosa" - <a href="https://openai.com/sora">OpenAI</a></li>
+            </ul>
+            <li>Notícia 2</li>
+            <ul>
+                <li>"IA Que Promete ser Mais Poderosa que ChatGPT" - <a href="https://gemini.google.com">Google</a></li>
+            </ul>
+        </ul>
+    </section>
 
-    <ul>
-        <li>Notícia 1</li>
-        <ul>
-            <li>"IA Criadora de vídeos extremamente poderosa" - <a href="https://openai.com/sora">OpenAI</a></li>
-        </ul>
-        <li>Notícia 2</li>
-        <ul>
-            <li>"IA Que Promete ser Mais Poderosa que ChatGPT" - <a href="https://gemini.google.com">Google</a></li>
-        </ul>
-    </ul>
 </body>
 </html>
