--- a/index.html
+++ b/index.html
@@ -13,7 +13,15 @@
         <h2>Tendências de AI no Futuro</h2>
     </header>
 
-    <section>
+    <section id="secao-apresentacao">
+        <img src="https://plus.unsplash.com/premium_photo-1680503587331-d8d4f8047393?q=80&w=1364&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D" alt="Logo do site">
+        <div id="texto-apresentacao">
+            <h2>Sobre Nós</h2>
+            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+        </div>
+    </section>
+<!-- 
+    <section id="secao-noticias">
         <h2>Notícias Importantes de Inteligência Artificial</h2>
     
         <ul>
@@ -26,7 +34,7 @@
                 <li>"IA Que Promete ser Mais Poderosa que ChatGPT" - <a href="https://gemini.google.com">Google</a></li>
             </ul>
         </ul>
-    </section>
+    </section> -->
 
 </body>
 </html>
