Ajustes CSS apresentação e início de seção notícias

--- a/index.html
+++ b/index.html
@@ -20,21 +20,21 @@
             <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
         </div>
     </section>
-<!-- 
+
     <section id="secao-noticias">
         <h2>Notícias Importantes de Inteligência Artificial</h2>
     
-        <ul>
-            <li>Notícia 1</li>
-            <ul>
-                <li>"IA Criadora de vídeos extremamente poderosa" - <a href="https://openai.com/sora">OpenAI</a></li>
-            </ul>
-            <li>Notícia 2</li>
-            <ul>
-                <li>"IA Que Promete ser Mais Poderosa que ChatGPT" - <a href="https://gemini.google.com">Google</a></li>
-            </ul>
-        </ul>
-    </section> -->
+        <div id="noticias">
+            <div>
+                <h3>Notícia 1</h3>
+                <p>"IA Criadora de vídeos extremamente poderosa" - <a href="https://openai.com/sora">OpenAI</a></p>
+            </div>
+            <div>
+                <h3>Notícia 2</h3>
+                <p>"IA Que Promete ser Mais Poderosa que ChatGPT" - <a href="https://gemini.google.com">Google</a></p>
+            </div>
+        </div>
+    </section>
 
 </body>
 </html>
