CSS melhorado seção noticias

--- a/index.html
+++ b/index.html
@@ -24,16 +24,18 @@
     <section id="secao-noticias">
         <h2>Notícias Importantes de Inteligência Artificial</h2>
     
-        <div id="noticias">
-            <div>
+        <ul id="noticias">
+            <li class="card">
                 <h3>Notícia 1</h3>
                 <p>"IA Criadora de vídeos extremamente poderosa" - <a href="https://openai.com/sora">OpenAI</a></p>
-            </div>
-            <div>
+                <img src="./assets/img/n1.png" alt="SORA">
+            </li>
+            <li class="card">
                 <h3>Notícia 2</h3>
                 <p>"IA Que Promete ser Mais Poderosa que ChatGPT" - <a href="https://gemini.google.com">Google</a></p>
+                <img src="./assets/img/n2.png" alt="GEMINI">
             </div>
-        </div>
+        </ul>
     </section>
 
 </body>
