Mudanças em noticías e novo formulário de filtro

--- a/index.html
+++ b/index.html
@@ -23,6 +23,25 @@
 
     <section id="secao-noticias">
         <h2>Notícias Importantes de Inteligência Artificial</h2>
+
+        <form>
+            <div class="campo">
+                <label for="nome">Notícia</label>
+                <input type="text" id="nome">
+            </div>
+
+            <div class="campo">
+                <label for="tipo">Empresa</label>
+                <select name="tipo" id="tipo">
+                    <option value="1">OpenAI</option>
+                    <option value="2">Google</option>
+                    <option value="3">Meta</option>
+                    <option value="4">Microsoft</option>
+                    <option value="5">Nvdia</option>
+                </select>
+            </div>
+
+        </form>
     
         <ul id="noticias">
             <li class="card">
